--- a/KidKountWebService/KidKountWebService/bin/KidKountWebService.dll.config
+++ b/KidKountWebService/KidKountWebService/bin/KidKountWebService.dll.config
@@ -2,6 +2,12 @@
 <configuration>
   <appSettings/>
   <connectionStrings/>
+
+    <compilation debug="true">
+        <assemblies>
+            <add assembly="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+        </assemblies>
+    </compilation>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
